<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_in">SIGN IN</string>
    <string name="confirm_password">confirm Password</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="follow_us_on">Follow us on</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_patient_bottom_navigation">Patient</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="PharmacyMedicineName">Name</string>
    <string name="PharmacyMedicinePrice">Price</string>
    <string name="PharmacyMedicineDescription">Description</string>
    <string name="PharmacyMedicineUsage">Usage</string>
    <string name="PharmacyMedicineIngredients">Ingredients</string>
    <string name="PharmacyMedicineSideEffects">Side Effects</string>
    <string name="PharmacyMedicineHint">Enter Amount</string>
    <string name="pharmacyCartPay">Order Items</string>
    <string name="title_activity_pharmacy_admin">PharmacyAdmin</string>
    <string name="PharmacyAdminBtnChooseGallery" translatable="false">Gallery</string>
    <string name="PharmacyAdminCamera">Camera</string>

    <string name="title_activity_doctor_portal">DoctorPortalActivity</string>

    <string name="PharmacyAdminDelete">Delete</string>



    //strings for test component

    <string name="TestQRButton">Scan QR</string>
    <string name="TestIDButton">Search By ID</string>

    <string name="TestDesPatientName">Patient Name</string>
    <string name="TestDesPatientID">Patient ID</string>
    <string name="TestDescription">Prescribed Tests</string>
    <string name="TestDesNextBtn">Next</string>

    <string name="TestAddTitle">Add Tests</string>
    <string name="TestAddName">Test Name :</string>
    <string name="TestAddDes">Description : </string>
    <string name="TestAddCost">Cost :</string>
    <string name="TestAddBtn">Add</string>
    <string name="TestAddPreView">History</string>

    <string name="TestPreviewList">Previous tests of ID : </string>

    <string name="TestUpdateBtn">Update</string>
    <string name="TestDeleteBtn">Delete</string>

    <string name="TestNavBtn1">Find User</string>
    <string name="TestNavBtn2">Description</string>
    <string name="TestNavBtn3">Add Tests</string>
    <string name="TestNavBtn4">History</string>

    <string name="TestUpdateTitle">Update Test</string>
    <string name="get_patient_id">Enter Patient ID</string>
    <string name="get_test_btn">Get Tests</string>

    //add Strings for navigation drawer

    <string name="UserEmail">Email</string>
    <string name="UserAddress">Address</string>
    <string name="UserPhone">Phone Number</string>
    <string name="UserName">Name</string>
    <string name="PharmacyDeliveryReject">REJECT</string>
    <string name="PharmacyDeliveyAccept">ACCEPT</string>
    <string name="PharmacyDeliveryAddressProp">sadasdasdasdsad\nasdsadasdasdana\nsdfwdaasd\nnsdsadawdad</string>
    <string name="About" >About</string>

    <string name="Add_New_Appointment">Add New Appointment</string>
    <string name="Search_doctor">Search Your Doctor Here</string>
    <string name="Select_doctor">Select Your Doctor</string>

</resources>
