<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PharmacyDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/MedicineImageImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/background_mask" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/MedicineName"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/PharmacyMedicineName"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/Name_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Price"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/PharmacyMedicinePrice"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/Price_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/price_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/PharmacyMedicineDescription"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/description_feild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Usage"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/PharmacyMedicineUsage"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/Usage_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Ingredient"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/PharmacyMedicineIngredients"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/Ingredient_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Side_effects"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/PharmacyMedicineSideEffects"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/Side_Effects_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/noOfItems"
                    android:layout_width="153dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="@string/PharmacyMedicineHint"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/Price_calculated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack" />

                <Button
                    android:id="@+id/Add_to_Cart"
                    android:layout_width="121dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:text="Add to Cart" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>